# speclab

./: .gitignore  AutomateFTIR.pyw  EmissionAutomation.py  EmissionLWIR.py  EmissionProcessor.py  README.md  ReflectanceVSWIR.py  SpeclibViewer.py  SpeclibViewerLWIR.py  SpeclibViewerTIR.py  __init__.py  config.py  convert_speclib.py  demo.py  functions.py  plot.py  pyproject.toml  utils.py
debug/: compare_wards_spectra.py  debug_hullfit.py  debug_instrument_metrics.py  make_dummy_vswir.py  test_merge.py
example_data/ASD_data/: 20231214_IJM_analyses.txt
example_data/WardRocks_igneous1/: 001 - Biotite Granite.CSV  002 - Muscovite-biotite Granite.CSV  007 - Granodiorite.CSV  022 - Quartz Monzonite.CSV  025 - Diorite.CSV  026 - Andesite Porphyry.CSV  029 - Hornblende Gabbro.CSV  031 - Gabbro.CSV  bbhot.CSV  bbwarm.CSV  measurement-info.csv
example_data/WardRocks_igneous2/: 011 - Rhyolite.CSV  027 - Dacite.CSV  028 - Hornblende Andesite.CSV  033 - Anorthosite.CSV  037 - Basalt.CSV  040 - Pyroxenite.CSV  042 - Dunite.CSV  bbhot.CSV  bbwarm.CSV  measurement-info.csv
example_data/WardRocks_metamorphic/: 079 - Mica Schist.CSV  090 - Granitoid Gneiss.CSV  091 - Biotite Gneiss.CSV  097 - Hornblende Gneiss.CSV  098 - Epidosite.CSV  bbhot.CSV  bbwarm.CSV  measurement-info.csv
example_data/WardRocks_sedimentary/: 047- Argillaceous Sandstone.CSV  048 - White Sandstone.CSV  050 - Arkose.CSV  051 - Graywacke.CSV  (+11 more)
reference_data/: PREFIRE_channels.csv  instrument_grids.npz  vswir_features.yaml
spectral_libraries/: ASU_speclib_full.hdf  CSE_wards_rock_library_SV.hdf  speclib_JFS_rock_forming_minerals.hdf
(+2 files in other folders)
