[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speclab"
version = "0.1.0"
description = "Spectroscopy processing library for emissivity calibration and analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "h5py",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["speclab*"]

[project.scripts]
speclib-viewer-TIR = "speclab.SpeclibViewerTIR:launch"
emission-processor = "speclab.EmissionProcessor:launch"

[tool.setuptools.package-data]
speclab = ["reference_data/*"]
